# docflow

./: .env.example  .gitignore  CONTEXT.md  DESIGN.md  PRODUCT.md  README.md  docker-compose.yml  render.yaml  test_smoke.py
apps/api/: pyproject.toml  requirements.txt
apps/api/app/: database.py  main.py  worker.py
apps/api/app/api/: dependencies.py
apps/api/app/api/routers/: document_dependencies.py  document_uploads.py  documents.py  integration_helpers.py  integrations.py  resource_helpers.py  resource_route_factory.py  resources.py  workflow_dependencies.py  workflow_updates.py  workflows.py
apps/api/app/core/: exceptions.py  rate_limit.py  settings.py  telemetry.py
apps/api/app/domain/: constants.py  document_models.py  integration_models.py  models.py  record_models.py  workflow_models.py
apps/api/app/infrastructure/: document_store.py  document_store_base.py  mongo_registry.py  mongo_resource_store.py  mongo_workflow_store.py  repositories.py  repository_base.py  s3_document_store.py
apps/api/app/services/: document_processing.py  document_processing_helpers.py  document_text.py  ocr_engine.py  ocr_models.py  ollama_provider.py  rule_based_provider.py  rule_extractors.py  tesseract_provider.py  workflow_service.py
apps/api/tests/: fakes.py  test_api.py  test_core.py  test_documents_api.py  test_domain.py  test_infrastructure.py  test_integrations_api.py  test_services.py  test_smoke.py  test_workflows_api.py
apps/web/: eslint.config.js  index.html  package-lock.json  package.json
apps/web/src/: App.tsx  api.ts  (+3 more)
docs/: api-contract.md  storage.md
(+107 files in other folders)
