[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docflow_api"
version = "0.1.0"
description = "DocFlow API Backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pymongo==4.10.1",
    "boto3==1.35.90",
    "python-multipart==0.0.20",
    "Pillow==11.0.0",
    "pdf2image==1.17.0",
    "opencv-python-headless==4.10.0.84",
    "certifi==2024.2.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (includes unused variable rules F401, F841)
    "I",   # isort
]
ignore = ["E501"]
